<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_btn">CLEAR</string>
    <string name="about_btn">About&#8230;</string>
    <string name="app_tittle">Basic Calculator App</string>
    <string name="dev_txt">Developed By:</string>
    <string name="aut_name">Sebastian Diaz Paz</string>
    <string name="ic_desc">App icon</string>
    <string name="version">v2.4.3</string>
    <string name="history">History</string>
    <string name="c_btn">C</string>

    <string name="navigation_drawe_open">Open navigation drawer</string>
    <string name="navigation_drawe_close">Close navigation drawer</string>
    <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons"
    title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
    title="Flaticon">www.flaticon.com</a></div>
    -->

</resources>
