<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
            <item android:id="@+id/calc_item"
                android:icon="@drawable/ic_calculator"
                android:title="@string/app_name">
            </item>

            <item android:id="@+id/history_item"
                android:icon="@drawable/ic_history"
                android:title="@string/history">
            </item>
        </menu>
    </item>

    <item android:title="Extra">
        <menu>
            <item android:id="@+id/about_item"
                android:icon="@drawable/ic_about"
                android:title="@string/about_btn">
            </item>
        </menu>
    </item>

</menu>